# rust-cli-template

./: Cargo.toml  LICENSE  README.md
.github/: sample-dependabot.yml
.github/workflows/: tests.yml
man/man1/: crust-cli.1
src/: main.rs
src/cli/: args.rs  atomic.rs  mod.rs  style.rs
src/commands/: greet.rs  mod.rs
src/commands/hello/: world.rs
src/utils/: confirm.rs  logger.rs  mod.rs  sudo.rs
xtask/: Cargo.toml
xtask/src/: main.rs
