[package]
name = "template"
description = "descriptionhere"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.64"
anyhow = "1.0.100"
anstyle = "1.0.13"
async-trait = "0.1.89"
nix = { version = "0.30.1", features = ["user"] }
dialoguer = "0.11.0"

[workspace]
members = [".", "xtask"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
unreachable = "deny"
must_use_candidate = "warn"

[lints.rust]
unused_must_use = "deny"

[profile.release]
lto = "thin"
